2007-03-05  Ingmar Schlecht  <ingmar@typo3.org>

	* New login image (if no skin is used) by Ture Andersen

2007-03-04  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: #5098: IRRE - foreign_unique without foreign_selector doesn't work

2007-03-01  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: #5069: TSconfig mod.web_list.allowedNewTables used in t3lib_TCEforms_inline
	* Fixed bug: #5092: Typo in Who is online (thanks to Matthias Kall)

2007-03-01  Karsten Dambekalns <karsten@typo3.org>

	* typo3/sysext/indexed_search: DBAL compliancy patch

2007-02-28  Ingmar Schlecht  <ingmar@typo3.org>

	* New login image for t3skin by Ture Andersen

2007-02-27  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: #5052: Form action URL is not htmlspecialchared (patch by Michael Stucki)
	* Fixed bug: #5072: Web>Info>Log - ID of BE user is displayed instead of its username
	* Fixed bug: #5073: Tools>User Admin>List users online is broken

2007-02-27  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #3666: permissions of versioned pages are not changed in draft workspace (patch by Andreas Wolf)
	* Added rootline cache to speed up tree renderings in the BE

2007-02-27  Ingo Renner  <typo3@ingo-renner.com>

	* Fixed bug: Cannot return from Quickedit mode

2007-02-26  Dmitry Dulepov  <dmitry@typo3.org>

	* Better fix for bug #5032: [LocalLang: 0?]DEF is sometimes displayed for content elements

2007-02-25  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5055: SQL problem with reviewstate in EM (thanks to Franz-Xaver Koch)
	* Fixed bug: List all fe_groups in page icon tooltip (patch by Michael Stucki)

2007-02-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fix for bug fix #2677: Highlighting of current page in workspaces was not de-highlighting previous one

2007-02-21  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.1RC2

2007-02-21  Michael Stucki  <michael@typo3.org>
